--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "keith-md@1.2.8",
-  "description": "I am Keith-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : https://www.youtube.com/@ibrahimmdgpt",
+  "description": "I am Keith-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : https://wa.me/message/CJGVIXZNWMKKE1",
   "logo": "https://telegra.ph/file/29ff2e030b401e489d2a8.jpg",
   "keywords": ["whatsappbot", "suhailMd", "suhail Md bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
   "success_url": "/suhail/",
